# Yggdrasil

./: .gitignore  NetworkHardware.md  README.md
docs/: ARCHITECTURE.md  NAMING_CONVENTIONS.md  USAGE.md
yggdrasil/: Cargo.toml
yggdrasil/.githooks/: pre-push
yggdrasil/deploy/: backup-hades.sh  gitea-sync.sh  install.sh  rollback.sh  update.sh
yggdrasil/docs/: ARCHITECTURE.md  HARDWARE_THOR_WOL.md  MCP_TOOLS.md  NetworkHardware.md  OPERATIONS.md  USAGE.md  sprint-058-bench-findings.md  sprint-059.md
yggdrasil/scripts/: diff-deployed-config.sh
yggdrasil/sprints/: sprint_000_infrastructure.md  sprint_002_mimir_mvp.md  sprint_003_huginn_mvp.md  sprint_004_muninn_mvp.md  sprint_008_mimir_advanced.md  sprint_010_production_hardening.md  sprint_013_hugin_moe_swap.md  sprint_014_munin_ipex_ollama.md
yggdrasil/tests-e2e/: .gitignore  README.md  conftest.py  pyproject.toml
yggdrasil/tests-e2e/helpers/: __init__.py  mcp_client.py  mimir_client.py  muninn_client.py  odin_client.py  services.py
yggdrasil/tests-e2e/tests/: test_activity.py  test_chat.py  test_code_search.py  test_concurrency.py  test_context_offload.py  test_dense_cosine_gate_tiers.py  test_deploy.py  test_dream_flows.py  test_dreamer.py  test_dreamer_consolidation_coherence.py  test_fergus_chat.py  test_flows_crud.py  test_gaming.py  test_gates.py  test_huginn.py  test_mcp_http.py  test_memory.py  test_mesh.py  test_metrics.py  test_security.py  test_shadow_log_schema.py  test_sprint_archive_collision.py  test_sprint_lifecycle.py  test_task_queue.py  test_vault.py  test_voice.py  test_webhook.py
(+214 files in other folders)
